partman-auto (98) UNRELEASED; urgency=low

  * Update old comment about partman-auto-lvm and $iflabel.

 -- Colin Watson <cjwatson@debian.org>  Wed, 20 Apr 2011 11:09:22 +0100

partman-auto (97) unstable; urgency=low

  [ Konstantinos Margaritis ]
  * Added armhf recipe

  [ Updated translations ]
  * Bulgarian (bg.po) by Damyan Ivanov
  * Czech (cs.po) by Miroslav Kure
  * Spanish (es.po) by Javier Fernández-Sanguino
  * Basque (eu.po) by Piarres Beobide
  * French (fr.po) by Christian Perrier
  * Kazakh (kk.po) by Baurzhan Muftakhidinov
  * Nepali (ne.po)
  * Portuguese (pt.po) by Miguel Figueiredo
  * Russian (ru.po) by Yuri Kozlov
  * Northern Sami (se.po) by Børre Gaup
  * Slovak (sk.po) by Ivan Masár
  * Swedish (sv.po) by Daniel Nylander
  * Telugu (te.po) by Arjuna Rao Chavala
  * Thai (th.po) by Theppitak Karoonboonyanan

 -- Hector Oron <zumbi@debian.org>  Tue, 22 Mar 2011 12:24:32 +0000

partman-auto (96) unstable; urgency=low

  [ Updated translations ]
  * Lao (lo.po) by Anousak Souphavanh
  * Northern Sami (se.po) by Børre Gaup
  * Sinhala (si.po) by Danishka Navin

 -- Hector Oron <zumbi@debian.org>  Tue, 22 Mar 2011 12:20:16 +0000

partman-auto (95) unstable; urgency=low

  [ Updated translations ]
  * Bengali (bn.po) by Israt Jahan

 -- Otavio Salvador <otavio@debian.org>  Fri, 12 Nov 2010 16:18:15 -0200

partman-auto (94) unstable; urgency=low

  * Team upload
  * Bump minimum root partition size to 900MiB in the home
    recipe. 
    This will allow installing the standard task and leave room for
    and extra kernel package in later life of the machine
    Closes: #528914
  * Adapt minimum sizes for /var and / in the multi recipe:
    /var must cope with about 150MiB downloads and has 125MiB data
    for the standard task install
    / has about 150MiB installed and should cope with an
    extra kernel at least
  * Adapt minimum size for / in the atomic recipe, to 900MiB
    Same rationale than above.

  [ Updated translations ]