@@ -1,6 +1,8 @@
 partman-auto (98) UNRELEASED; urgency=low
 
   * Update old comment about partman-auto-lvm and $iflabel.
+  * Refactor some of decode_recipe to make it easier to have multiple ways
+    to ignore recipe stanzas.
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 20 Apr 2011 11:09:22 +0100
 
